backend/manifests/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-backend
  labels:
    app: op-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: op-backend
    spec:
      containers:
        - name: op-backend
          image: kaitan8110/op-backend
          ports:
            - containerPort: 5001
