backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-backend
spec:
  selector:
    app: op-backend
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
